<resources>
    <string name="app_name">小卡日记</string>
    <string name="app_settings">设置</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="switch_theme">切换主题</string>
    <string name="theme_picker">主题选择</string>

    <string name="nav_time_line">时间线</string>
    <string name="nav_diary">日记</string>
    <string name="nav_text">文字</string>
    <string name="nav_photo">图片</string>
    <string name="nav_video">视频</string>

    <string name="nav_other">其他</string>
    <string name="nav_setting">设置</string>
    <string name="nav_share">分享</string>

    <string name="state_empty">没有更多的数据</string>
    <string name="state_error">错误，点击重试</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_date">选择日期</string>
    <string name="action_search">搜索日记</string>

    <string name="dialog_title">选择年份</string>
    <string name="dialog_p_btn">确定</string>
    <string name="dialog_n_btn">取消</string>
    <string name="menu_edit_diary_done">保存日记</string>
    <string name="menu_diary_edit">编辑</string>
    <string-array name="dialog_year">
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
    </string-array>

    <string name="edit_title_hint">输入标题</string>
    <string name="edit_content_hint">输入内容…</string>

    <string name="tip_dialog_title">注意</string>
    <string name="tip_dialog_msg">有内容尚未保存，确认退出编辑吗？</string>
    <string name="tip_dialog_done">确定</string>
    <string name="tip_dialog_cancel">取消</string>

    <string name="long_string">量子力学是描述微观物质的理论，与相对论一起被认为是现代物理学的两大基本支柱，许多物理学理论和科学如原子物理学、固体物理学、核物理学和粒子物理学以及其它相关的学科都是以量子力学为基础所进行的。
        量子力学是描写原子和亚原子尺度的物理学理论[1]  。该理论形成于20世纪初期，彻底改变了人们对物质组成成分的认识。微观世界里，粒子不是台球，而是嗡嗡跳跃的概率云，它们不只存在一个位置，也不会从点A通过一条单一路径到达点B[1]  。根据量子理论，粒子的行为常常像波，用于描述粒子行为的“波函数”预测一个粒子可能的特性，诸如它的位置和速度，而非确定的特性[1]  。物理学中有些怪异的概念，诸如纠缠和不确定性原理，就源于量子力学[1]  。
        电子云
        电子云
        19世纪末，经典力学和经典电动力学在描述微观系统时的不足越来越明显。量子力学是在20世纪初由马克斯·普朗克、尼尔斯·玻尔、沃纳·海森堡、埃尔温·薛定谔、沃尔夫冈·泡利、路易·德布罗意、马克斯·玻恩、恩里科·费米、保罗·狄拉克、阿尔伯特·爱因斯坦、康普顿等一大批物理学家共同创立的。量子力学的发展革命性地改变了人们对物质的结构以及其相互作用的认识。量子力学得以解释许多现象和预言新的、无法直接想象出来的现象，这些现象后来也被非常精确的实验证明。除通过广义相对论描写的引力外，至今所有其它物理基本相互作用均可以在量子力学的框架内描写（量子场论）。
        量子力学并没有支持自由意志，只是于微观世界物质具有概率波等存在不确定性，不过其依然具有稳定的客观规律，不以人的意志为转移，否认宿命论。第一，这种微观尺度上的随机性和通常意义下的宏观尺度之间仍然有着难以逾越的距离；第二，这种随机性是否不可约简难以证明，事物是由各自独立演化所组合的多样性整体，偶然性与必然性存在辩证关系。自然界是否真有随机性还是一个悬而未决的问题，对这个鸿沟起决定作用的就是普朗克常数，统计学中的许多随机事件的例子，严格说来实为决定性的。
        在量子力学中，一个物理体系的状态由波函数表示，波函数的任意线性叠加仍然代表体系的一种可能状态。对应于代表该量的算符对其波函数的作用；波函数的模平方代表作为其变量的物理量出现的几率密度。
        量子力学是在旧量子论的基础上发展起来的。旧量子论包括普朗克的量子假说、爱因斯坦的光量子理论和玻尔的原子理论。
        1900年，普朗克提出辐射量子假说，假定电磁场和物质交换能量是以间断的形式（能量子）实现的，能量子的大小同辐射频率成正比，比例常数称为普朗克常数，从而得出普朗克公式，正确地给出了黑体辐射能量分布。
        1905年，爱因斯坦引进光量子（光子）的概念，并给出了光子的能量、动量与辐射的频率和波长的关系，成功地解释了光电效应。其后，他又提出固体的振动能量也是量子化的，从而解释了低温下固体比热问题。
        1913年，玻尔在卢瑟福原有核原子模型的基础上建立起原子的量子理论。按照这个理论，原子中的电子只能在分立的轨道上运动，在轨道上运动时候电子既不吸收能量，也不放出能量。原子具有确定的能量，它所处的这种状态叫“定态”，而且原子只有从一个
        普朗克
        普朗克
        定态到另一个定态，才能吸收或辐射能量。这个理论虽然有许多成功之处，对于进一步解释实验现象还有许多困难。
        在人们认识到光具有波动和微粒的二象性之后，为了解释一些经典理论无法解释的现象，法国物理学家德布罗意于1923年提出了物质波这一概念。认为一切微观粒子均伴随着一个波，这就是所谓的德布罗意波。</string>

    <string name="settings_settings">设置</string>
    <string name="settings_get_msg">开启动画</string>
    <string name="settings_get_msg_desc">开启动画后可能会造成卡顿，请谨慎开启</string>
    <string name="settings_night_model">夜间模式</string>
    <string name="settings_theme">主题</string>
    <string name="settings_download_diary">导出日记</string>

    <string name="settings_about">关于</string>
    <string name="settings_app_version">版本：v0.0.1</string>
    <string name="settings_rate">在 App 商店评价</string>
    <string name="settings_rate_desc">请给我好评吧:-D</string>
    <string name="settings_author">作者</string>
    <string name="settings_author_desc">Plant</string>
    <string name="settings_feed_back">意见或建议</string>
    <string name="settings_feed_back_desc">不好用？请点此处反馈</string>

    <string name="settings_support">支持</string>
    <string name="settings_coffee">赞助</string>
    <string name="settings_coffee_desc">对您很有帮助？请点击此处捐赠</string>
    <string name="settings_open_source">感谢的开源项目</string>

    <string name="sendto">mailto:marktonymengyi@gmail.com</string>
    <string name="mail_topic">PaperPlane Feedback / Advice</string>
    <string name="device_model">Device Version:</string>
    <string name="sdk_version">SDK Version:</string>
    <string name="no_mail_app">No email app found</string>
    <string name="coffee">Buy Me A Cup of Coffee</string>
    <string name="coffee_description">If you think I deserve to get paid for my work, buy me a cup of coffee for support</string>
    <string name="donate">Donate Developer</string>
    <string name="donate_content">Alipay account will be copied to clipboard.Launch Alipay and paste it to finish donating.Thanks for support!</string>
    <string name="donate_account">marktonymengyi@gmail.com</string>
    <string name="positive">OK</string>
    <string name="negative">Cancel</string>

    <string-array name="time_of_saving_articles">
        <item>1 day</item>
        <item>5 days</item>
        <item>15 days</item>
        <item>30 days</item>
    </string-array>

    <string-array name="time_of_saving_articles_item">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="search_hint">搜索日记</string>
</resources>
