<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_time_line"
                android:icon="@drawable/ic_time_line_black_24dp"
                android:title="@string/nav_time_line"/>
        <item
                android:id="@+id/nav_diary"
                android:icon="@drawable/ic_menu_diary"
                android:title="@string/nav_diary"/>
        <item
                android:id="@+id/nav_text"
                android:icon="@drawable/ic_menu_text"
                android:title="@string/nav_text"/>
        <item
                android:id="@+id/nav_photo"
                android:icon="@drawable/ic_image_black_24dp"
                android:title="@string/nav_photo"/>
        <item
                android:id="@+id/nav_video"
                android:icon="@drawable/ic_video_library_black_24dp"
                android:title="@string/nav_video"/>
    </group>

    <item android:title="@string/nav_other">
        <menu>

            <item
                    android:id="@+id/nav_setting"
                    android:icon="@drawable/ic_settings_black_24dp"
                    android:title="@string/nav_setting"/>

            <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/nav_share"/>

        </menu>
    </item>

</menu>
